# ocean

./: README.md
backend/: Cargo.toml
frontend/: nx.json  package-lock.json  package.json  workspace.json
frontend/apps/webapp/src/app/: app.tsx
frontend/apps/webapp/src/app/hello/: hello.tsx
frontend/libs/ui/src/lib/: ui.tsx
